[gd_scene load_steps=2 format=3 uid="uid://c2g1gga6yg504"]

[ext_resource type="Script" path="res://Escenas/grupo_enemies.gd" id="1_du6gi"]

[node name="GrupoEnemies" type="Node"]
script = ExtResource("1_du6gi")

[node name="TimerDescender" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="TimerDisparar" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TimerEnemyBonus" type="Timer" parent="."]

[connection signal="timeout" from="TimerDescender" to="." method="_on_timer_descender_timeout"]
[connection signal="timeout" from="TimerDisparar" to="." method="_on_timer_disparar_timeout"]
[connection signal="timeout" from="TimerEnemyBonus" to="." method="_on_timer_enemy_bonus_timeout"]
